src-errormsg/E12-MissingAppParens/Plutarch.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E12-MissingAppParens/Plutarch.hs:38:24: error: [GHC-83865]
    • Couldn't match type ‘PInteger’
                     with ‘PAsData PWithdraw :--> PInteger’
      Expected: Term s (PWithdraw :--> (PAsData PWithdraw :--> PInteger))
        Actual: Term s (PWithdraw :--> PInteger)
    • In the first argument of ‘(#)’, namely ‘self’
      In the first argument of ‘(#)’, namely ‘self # pfromData’
      In the first argument of ‘(-)’, namely ‘(self # pfromData # from)’
   |
38 |     PDeduct n from -> (self # pfromData # from) - pfromData n
   |                        ^^^^

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E12-MissingAppParens/Plutarch.hs:38:31: error: [GHC-83865]
    • Couldn't match expected type: Term s PWithdraw
                  with actual type: Term s0 (PAsData a0) -> Term s0 a0
    • Probable cause: ‘pfromData’ is applied to too few arguments
      In the second argument of ‘(#)’, namely ‘pfromData’
      In the first argument of ‘(#)’, namely ‘self # pfromData’
      In the first argument of ‘(-)’, namely ‘(self # pfromData # from)’
    • Relevant bindings include
        from :: Term s (PAsData PWithdraw)
          (bound at /Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E12-MissingAppParens/Plutarch.hs:38:15)
        n :: Term s (PAsData PInteger)
          (bound at /Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E12-MissingAppParens/Plutarch.hs:38:13)
        w :: PWithdraw s
          (bound at /Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E12-MissingAppParens/Plutarch.hs:34:55)
        wt :: Term s PWithdraw
          (bound at /Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E12-MissingAppParens/Plutarch.hs:34:36)
        self :: Term s (PWithdraw :--> PInteger)
          (bound at /Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E12-MissingAppParens/Plutarch.hs:34:31)
        netWithdraw :: Term s (PWithdraw :--> PInteger)
          (bound at /Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E12-MissingAppParens/Plutarch.hs:34:1)
   |
38 |     PDeduct n from -> (self # pfromData # from) - pfromData n
   |                               ^^^^^^^^^
